--- a/index.html
+++ b/index.html
@@ -362,15 +362,15 @@ h1 { font-size: 2.5em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin-bottom: 
     border-top: 1px solid rgba(255,255,255,0.2);
     ">
     <strong>Eleven Squad Builder ⚽</strong><br>
-    © 2025-2026 - Créé par un passionné de football<br>
-    <small>Application communautaire gratuite • Données à titre indicatif • Pas d'affiliation officielle mais personnel dans le but d'apprendre les bases de Bitcoin.</small>
+    © 2025-2026 - Créé par un passionné.<br>
+    <small>Application communautaire gratuite • Affiliation personnel dans le but d'apprendre les bases de Bitcoin.</small>
     </footer>
     <header>
         <h1>⚽ Eleven Squad Builder</h1>
         <p>Créez votre équipe de rêve - Toutes époques confondues.</p>
 <p>• Sélectionnez vos joueurs, votre coach et votre meilleur joueur.</p>
 <p>• Cliquez sur exporter, prenez une capture d'ecran et partagez votre "best team".</p>
-<p>Merci de nous soutenir en suivant les liens affilié pour l'Academie BTC. Contactz nous pour ajouté des correctifs. Application à but communautaire. </p>
+<p>Merci de nous soutenir en suivant les liens affilié pour l'Academie BTC. Contactez nous pour ajouter des correctifs. Application à but communautaire. </p>
     </header>
 
     <div class="tabs">
