--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ function openModal(position, rowIndex, posIndex) {
 
 function openGoatModal() {
     currentPosition = { isGoat: true };
-    document.getElementById('modalTitle').textContent = '🐐 Choisir THE GOAT';
+    document.getElementById('modalTitle').textContent = '🐐 Choisir le meilleur joueur';
     document.getElementById('playerName').value = goat ? goat.name : '';
     document.getElementById('playerFlag').value = goat ? goat.flag : '🌍';
     document.getElementById('playerClub').value = goat ? (goat.club || '') : '';
