--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@ h1 { font-size: 2.5em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin-bottom: 
                     <option value="4-2-4">4-2-4</option>
                     <option value="4-3-1-2">4-3-1-2</option>
                     <option value="4-3-3" selected>4-3-3</option>
+                    <option value="4-4-1-1"selected>4-4-1-1</option>
                     <option value="4-4-2">4-4-2</option>
                     <option value="4-5-1">4-5-1</option>
                     <option value="5-2-1-2">5-2-1-2</option>
@@ -625,6 +626,7 @@ const formations = {
     '4-3-1-2': [ ['GK'], ['LB','CB','CB','RB'], ['CM','CM','CM'], ['CAM'], ['ST','ST'] ],
     '4-3-3': [ ['GK'], ['LB','CB','CB','RB'], ['CM','CM','CM'], ['LW','ST','RW'] ],
     '4-4-2': [ ['GK'], ['LB','CB','CB','RB'], ['LM','CM','CM','RM'], ['ST','ST'] ],
+    '4-4-1-1': [ ['GK'], ['LB','CB','CB','RB'], ['LM','CM','CM','RM'], ['CAM'], ['ST'] ],
     '4-5-1': [ ['GK'], ['LB','CB','CB','RB'], ['LM','CM','CM','CM','RM'], ['ST'] ],
     '5-2-1-2': [ ['GK'], ['LB','CB','CB','CB','RB'], ['CM','CM'], ['CAM'], ['ST','ST'] ],
     '5-2-3': [ ['GK'], ['LB','CB','CB','CB','RB'], ['CM','CM'], ['LW','ST','RW'] ],
