--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ h1 { font-size: 2.5em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin-bottom: 
                     <option value="4-2-4">4-2-4</option>
                     <option value="4-3-1-2">4-3-1-2</option>
                     <option value="4-3-3" selected>4-3-3</option>
-                    <option value="4-4-1-1"selected>4-4-1-1</option>
+                    <option value="4-4-1-1">4-4-1-1</option>
                     <option value="4-4-2">4-4-2</option>
                     <option value="4-5-1">4-5-1</option>
                     <option value="5-2-1-2">5-2-1-2</option>
